# easy-mirrors

./: .gitignore  CHANGELOG.md  Dockerfile  HOWTOPUBLISH  Makefile  README.md  docker-bake.hcl  pyproject.toml  tox.ini
.github/workflows/: hooks.yml  tests.yml
docker/: README.md
docker/meta-easy-mirrors/conf/: layer.conf
docker/meta-easy-mirrors/conf/machine/: arch-aarch64.conf  arch-x86-64.conf
docker/meta-easy-mirrors/recipes/python3/: python3-image.bb
docker/meta-easy-mirrors/recipes/python3-easy-mirrors/: python3-easy-mirrors_0.3.1.bb  python3-easy-mirrors_0.3.2.bb  python3-easy-mirrors_0.3.3.bb
docker/meta-easy-mirrors/recipes/python3-easy-mirrors-image/: python3-easy-mirrors-image.bb
src/easy_mirrors/: __about__.py  __init__.py  __main__.py  api.py  config.py  defaults.py  exceptions.py  fields.py  git_repository.py  logger_wrapper.py
tests/: test_api.py  test_config.py  test_fields.py  test_git_repository.py
